--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html, body {
   flex-direction: column;
   min-height: 100%;
   
-  background-image: url("/public/assets/bg.png");
+  /* background-image: url("/public/assets/bg.png"); */
   background-color: var(--second-bg-color);
   background-blend-mode: overlay;
   background-size: cover;
@@ -23,7 +23,7 @@ html, body {
   justify-content: center;
   align-items: center;
   width: auto;
-  margin: 20px;
+  margin: 3%;
 }
 
 .Greeting-Text {
@@ -34,11 +34,12 @@ html, body {
   width: 50%;
   color: var(--text-color-2);
   position: relative;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .Header-Placeholder{
   min-width: 100%;
-  height: var(--header);
+  min-height: 10vh
 }
 
 .Header-Wrapper {
@@ -67,9 +68,7 @@ html, body {
   display: flex;
   flex: 1;
   flex-direction: column;
-
   min-height: 80vh;
-
 }
 
 footer {
