--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,6 @@
 .Header{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 10px;
     padding: 10px;
     width: auto;
@@ -11,7 +11,7 @@
     background-color: var(--main-color);
     border-color: var(--main-color);
     color: var(--text-color);
-    width: 200px;
+    min-width:20vh; 
 
 }
 
@@ -24,6 +24,6 @@
     background-color: var(--focused-color);
     border-color: var(--focused-color);
     color: var(--text-color);
-    width: 200px;
+    /* width: 30vh; */
 }
 
